5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1593_2426.log
== SUBMITION (2019-04-02 00:11:59) 
-- CODE:
autonomia = 12.0

tempo = float(input("Tempo (em h): "))
velocidade = float(input("Velocidade (em km/h): "))

distancia = tempo * velocidade
litros = distancia / autonomia

print(distancia)
print(litros)
-- EXECUTION TIME:
0.15894
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:55:17) 
-- CODE:
# Entradas
temp = float(input("Determine: "))
velo = float(input("Determine: "))
# Variavel
auto = 12.0
dist = valo * temp
litr = dist / auto
# Saida
print(dist)
print(litr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist = valo * temp
NameError: name 'valo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:55:38) 
-- CODE:
# Entradas
temp = float(input("Determine: "))
velo = float(input("Determine: "))
# Variavel
auto = 12.0
dist = velo * temp
litr = dist / auto
# Saida
print(dist)
print(litr)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 17:55:46) 
-- CODE:
# Entradas
temp = float(input("Determine: "))
velo = float(input("Determine: "))
# Variavel
auto = 12.0
dist = velo * temp
litr = dist / auto
# Saida
print(dist)
print(litr)
-- EXECUTION TIME:
0.223604
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
